infra/networking/gateway/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.83  # your actual node IP
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.drogon.tech'
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.drogon.tech'
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-drogontech
      allowedRoutes:
        namespaces:
          from: All
